--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -42,7 +42,7 @@ comments: false
                     <div ng-repeat="entry in yaml.tags">{{entry}}</div>
                 </div>
                 <div class="row">
-                    <h2>Frontpage</h2‚>
+                    <h2>Frontpage</h2>
                     <input type="checkbox" ng-model="yaml.frontpage" ng-init="yaml.frontpage=true"/>
                     {{yaml.frontpage}}
                 </div>
