--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -43,7 +43,7 @@ comments: false
                 </div>
                 <div class="row">
                     <h2>Frontpage</h2>
-                    <input type="checkbox" ng-model="yaml.frontpage" />
+                    <input type="checkbox" ng-model="frontpage" />
                     {{yaml.frontpage}}
                 </div>
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
