--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -44,7 +44,7 @@ comments: false
                 <div class="row">
                     <h2>Frontpage</h2>
                     <input type="checkbox" ng-model="yaml.frontpage" />
-                    {{yaml.frontpage}}
+                    {{yaml}}
                 </div>
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
 				<br />
