--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -43,6 +43,10 @@ comments: false
                 </div>
                 <div class="row">
                     <h2>Frontpage</h2>
+                    <input type="checkbox" ng-model="yaml.published" />
+                </div>
+                <div class="row">
+                    <h2>Published</h2>
                     <input type="checkbox" ng-model="yaml.frontpage" />
                 </div>
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
