--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -34,6 +34,10 @@ comments: false
 					</div>
 				</div>
                 <div class="row">
+                    <h1>Layout</h1>
+                    <div>{{yaml.layout}}</div>
+                </div>
+                <div class="row">
                     <h1>Categories</h1>
                     <div ng-repeat="entry in yaml.categories">{{entry}}</div>
                 </div>
