--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -38,6 +38,10 @@ comments: false
                     <div>{{yaml.layout}}</div>
                 </div>
                 <div class="row">
+                    <h1>tagline</h1>
+                    <div>{{yaml.tagline}}</div>
+                </div>
+                <div class="row">
                     <h1>Categories</h1>
                     <div ng-repeat="entry in yaml.categories">{{entry}}</div>
                 </div>
