--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -48,7 +48,10 @@ comments: false
                 <div class="row">
                     <h1>Tags</h1>
                     <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
-                    <bootstrap-tagsinput ng-model="yaml.tags">{{entry}}</bootstrap-tagsinput>
+                    <bootstrap-tagsinput
+                        ng-model="yaml.tags">
+
+                    </bootstrap-tagsinput>
                 </div>
                 <div class="row">
                     <h2>Frontpage</h2>
