--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -51,6 +51,7 @@ comments: false
                     <bootstrap-tagsinput
                             ng-model="cities"
                             typeahead-source="queryCities"
+                            tagclass="getTagClass"
                             itemvalue="value"
                             itemtext="text">
                     </bootstrap-tagsinput>
