--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -49,7 +49,8 @@ comments: false
                     <h1>Tags</h1>
                     <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
                     <bootstrap-tagsinput
-                            ng-model="yaml.tags">
+                            ng-model="yaml.tags"
+                            tagclass="tag label label-info">
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
