--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -50,7 +50,7 @@ comments: false
                     <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
                     <bootstrap-tagsinput
                             ng-model="yaml.tags"
-                            tagclass="tag label label-info">
+                            tagclass="getTagClass">
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
