--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -46,7 +46,9 @@ comments: false
                     <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
                     <bootstrap-tagsinput
                             ng-model="yaml.categories"
-                            tagclass="getTagClass">
+                            tagclass="getTagClass"
+                            data-role="tagsinput"
+                            placeholder="Add tags">
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
