--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -49,6 +49,7 @@ comments: false
                             tagclass="getTagClass"
                             data-role="tagsinput"
                             placeholder="Add tags">
+                        <input type="text" placeholder="test" size="1">
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
