--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -47,7 +47,7 @@ comments: false
                     <bootstrap-tagsinput
 						ng-model="yaml.categories"
 						tagclass="getTagClass"
-						placeholder="Add tags">
+						placeholder="Add categories here...">
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
@@ -55,7 +55,8 @@ comments: false
                     <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
                     <bootstrap-tagsinput
                             ng-model="yaml.tags"
-                            tagclass="getTagClass">
+                            tagclass="getTagClass"
+							placeholder="Add categories here...">
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
