--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -56,7 +56,7 @@ comments: false
                     <bootstrap-tagsinput
                             ng-model="yaml.tags"
                             tagclass="getTagClass"
-							placeholder="Add categories here...">
+							placeholder="Add tags here...">
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
