--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -47,7 +47,7 @@ comments: false
                     <bootstrap-tagsinput
 						ng-model="yaml.categories"
 						tagclass="getTagClass"
-						placeholder="Add categories here...">
+						placeholder="Add categories here... Confirm with ENTER">
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
@@ -56,7 +56,7 @@ comments: false
                     <bootstrap-tagsinput
                             ng-model="yaml.tags"
                             tagclass="getTagClass"
-							placeholder="Add tags here...">
+							placeholder="Add tags here..." Confirm with ENTER>
                     </bootstrap-tagsinput>
                 </div>
                 <div class="row">
