--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -39,7 +39,7 @@ comments: false
                 </div>
                 <div class="row">
                     <h1>Tagline</h1>
-					<input type="text" class="form-control" id="title" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)" required/>
+					<input type="text" class="form-control" id="title" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
                 </div>
                 <div class="row">
                     <h1>Categories</h1>
