--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -34,7 +34,7 @@ comments: false
 					</div>
 				</div>
 
-				<button class="btn btn-default" ng-click="advancedSettings = !advancedSettings">Toggle collapse</button>
+				<button class="btn btn-default" ng-click="advancedSettings = !advancedSettings">Advanced Settings</button>
 				<div collapse="advancedSettings">
 					<div class="well well-lg">
 						<div class="row">
