--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -36,7 +36,7 @@ comments: false
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
 				<br />
 				<button class="btn btn-default" ng-click="advancedSettings = !advancedSettings">Advanced Settings</button>
-				<div collapse="advancedSettings">
+				<div ng-cloak collapse="advancedSettings">
 					<div class="well well-lg">
 						<div class="row">
 							<h1>Layout</h1>
