--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -70,11 +70,11 @@ comments: false
 						</div>
 						<div class="row">
 							<h2>Frontpage</h2>
-							<input type="checkbox" ng-model="yaml.frontpage" />
+							<input type="checkbox" ng-model="yaml.frontpage" /> Frontpage
 						</div>
 						<div class="row">
 							<h2>Published</h2>
-							<input type="checkbox" ng-model="yaml.published" />
+							<input type="checkbox" ng-model="yaml.published" /> Published
 						</div>
 					</div> 
 				</div>
