--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -47,8 +47,14 @@ comments: false
                             <input type="checkbox" ng-model="yaml.published" /> Published
                         </div>
                         <div class="row">
-							<h1>Layout</h1>
-							<div>{{yaml.layout}}</div>
+                            <label class="col-sm-2 control-label" for="layout">Layout</label>
+                            <div class="col-sm-10">
+                                <div class="form-control" id="layout">{{yaml.layout}}</div>
+                            </div>
+                        </div>
+                        <div class="row">
+							<h1></h1>
+
 						</div>
 						<div class="row">
 							<h1>Tagline</h1>
