--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -49,13 +49,9 @@ comments: false
                         <div class="row">
                             <label class="col-sm-2 control-label" for="layout">Layout</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="layout">{{yaml.layout}}</div>
+                                <input type="text" class="form-control" id="layout" ng-model="yaml.layout" placeholder="Layout"/>
                             </div>
                         </div>
-                        <div class="row">
-							<h1></h1>
-
-						</div>
 						<div class="row">
 							<h1>Tagline</h1>
 							<input type="text" class="form-control" id="title" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
