--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -52,10 +52,12 @@ comments: false
                                 <input type="text" class="form-control" id="layout" ng-model="yaml.layout" placeholder="Layout"/>
                             </div>
                         </div>
-						<div class="row">
-							<h1>Tagline</h1>
-							<input type="text" class="form-control" id="title" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
-						</div>
+                        <div class="row">
+                            <label class="col-sm-2 control-label" for="tagline">Layout</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="tagline" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
+                            </div>
+                        </div>
 						<div class="row">
 							<h1>Categories</h1>
 							<!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
