--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -58,25 +58,28 @@ comments: false
                                 <input type="text" class="form-control" id="tagline" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
                             </div>
                         </div>
-						<div class="row">
-							<h1>Categories</h1>
-							<!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
-							<bootstrap-tagsinput
-								ng-model="yaml.categories"
-								tagclass="getTagClass"
-								placeholder="Add categories here... Confirm with ENTER">
-							</bootstrap-tagsinput>
-						</div>
-						<div class="row">
-							<h1>Tags</h1>
-							<!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
-							<bootstrap-tagsinput
-									ng-model="yaml.tags"
-									tagclass="getTagClass"
-									placeholder="Add tags here..." Confirm with ENTER>
-							</bootstrap-tagsinput>
-						</div>
-
+                        <div class="row">
+                            <label class="col-sm-2 control-label" for="categories">Categories</label>
+                            <div class="col-sm-10">
+                                <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
+                                <bootstrap-tagsinput
+                                        ng-model="yaml.categories"
+                                        tagclass="getTagClass"
+                                        placeholder="Add categories here... Confirm with ENTER">
+                                </bootstrap-tagsinput>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-sm-2 control-label" for="tags">Tags</label>
+                            <div class="col-sm-10">
+                                <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
+                                <bootstrap-tagsinput
+                                        ng-model="yaml.tags"
+                                        tagclass="getTagClass"
+                                        placeholder="Add tags here..." Confirm with ENTER>
+                                </bootstrap-tagsinput>
+                            </div>
+                        </div>
 					</div> 
 				</div>
 			</form>
