--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -43,6 +43,7 @@ comments: false
 				<div ng-cloak collapse="advancedSettings">
 					<div class="well well-lg">
                         <div class="row">
+                            <label class="col-sm-2 control-label" for="layout">Activate</label>
                             <input type="checkbox" ng-model="yaml.frontpage" /> Frontpage
                             <input type="checkbox" ng-model="yaml.published" /> Published
                         </div>
