--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -68,7 +68,7 @@ comments: false
                                 <bootstrap-tagsinput
                                         ng-model="yaml.categories"
                                         tagclass="getTagClass"
-                                        placeholder="Add categories here... Confirm with ENTER">
+                                        placeholder="Add categories here...">
                                 </bootstrap-tagsinput>
                             </div>
                         </div>
