--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -44,20 +44,20 @@ comments: false
 					<div class="well well-lg">
                         <div class="row">
                             <label class="col-sm-2 control-label" for="layout">Activate</label>
-                            <div class="col-sm-10">
+                            <div class="col-sm-10" style="margin-bottom:10px">
                                 <input type="checkbox" ng-model="yaml.frontpage" /> Frontpage
                                 <input type="checkbox" ng-model="yaml.published" /> Published
                             </div>
                         </div>
                         <div class="row">
                             <label class="col-sm-2 control-label" for="layout">Layout</label>
-                            <div class="col-sm-10">
+                            <div class="col-sm-10" style="margin-bottom:10px">
                                 <input type="text" class="form-control" id="layout" ng-model="yaml.layout" placeholder="Layout"/>
                             </div>
                         </div>
                         <div class="row">
                             <label class="col-sm-2 control-label" for="tagline">Layout</label>
-                            <div class="col-sm-10">
+                            <div class="col-sm-10" style="margin-bottom:10px">
                                 <input type="text" class="form-control" id="tagline" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
                             </div>
                         </div>
