--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -50,13 +50,7 @@ comments: false
                             </div>
                         </div>
                         <div class="row">
-                            <label class="col-sm-2 control-label" for="layout">Layout</label>
-                            <div class="col-sm-10" style="margin-bottom:10px">
-                                <input type="text" class="form-control" id="layout" ng-model="yaml.layout" placeholder="Layout"/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <label class="col-sm-2 control-label" for="tagline">Layout</label>
+                            <label class="col-sm-2 control-label" for="tagline">Tagline</label>
                             <div class="col-sm-10" style="margin-bottom:10px">
                                 <input type="text" class="form-control" id="tagline" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
                             </div>
@@ -81,6 +75,12 @@ comments: false
                                         tagclass="getTagClass"
                                         placeholder="Add tags here..." Confirm with ENTER>
                                 </bootstrap-tagsinput>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-sm-2 control-label" for="layout">Layout</label>
+                            <div class="col-sm-10" style="margin-bottom:10px">
+                                <input type="text" class="form-control" id="layout" ng-model="yaml.layout" placeholder="Layout"/>
                             </div>
                         </div>
 					</div> 
