--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -42,20 +42,20 @@ comments: false
 				<div class="row">&nbsp;</div>
 				<div ng-cloak collapse="advancedSettings">
 					<div class="well well-lg">
-                        <div class="row">
+                        <div class="form-group">
                             <label class="col-sm-2 control-label" for="layout">Activate</label>
                             <div class="col-sm-10" style="margin-bottom:10px">
                                 <input type="checkbox" ng-model="yaml.frontpage" /> Frontpage
                                 <input type="checkbox" ng-model="yaml.published" /> Published
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="form-group">
                             <label class="col-sm-2 control-label" for="tagline">Tagline</label>
                             <div class="col-sm-10" style="margin-bottom:10px">
                                 <input type="text" class="form-control" id="tagline" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="form-group">
                             <label class="col-sm-2 control-label" for="categories">Categories</label>
                             <div class="col-sm-10">
                                 <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
@@ -66,7 +66,7 @@ comments: false
                                 </bootstrap-tagsinput>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="form-group">
                             <label class="col-sm-2 control-label" for="tags">Tags</label>
                             <div class="col-sm-10">
                                 <!--http://timschlechter.github.io/bootstrap-tagsinput/examples/-->
@@ -77,7 +77,7 @@ comments: false
                                 </bootstrap-tagsinput>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="form-group">
                             <label class="col-sm-2 control-label" for="layout">Layout</label>
                             <div class="col-sm-10" style="margin-bottom:10px">
                                 <input type="text" class="form-control" id="layout" ng-model="yaml.layout" placeholder="Layout"/>
