--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -41,7 +41,7 @@ comments: false
 				</button>
 				<div class="row">&nbsp;</div>
 				<div ng-cloak collapse="advancedSettings">
-					<div class="well well-lg">
+					<div class="form-horizontal" role="form">
                         <div class="form-group">
                             <label class="col-sm-2 control-label" for="layout">Activate</label>
                             <div class="col-sm-10" style="margin-bottom:10px">
