--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -40,7 +40,7 @@ comments: false
 					Submit
 				</button>
 				<div class="row">&nbsp;</div>
-				<div ng-cloak collapse="advancedSettings">
+				<div ng-cloak class="well well-lg" collapse="advancedSettings">
 					<div class="form-horizontal" role="form">
                         <div class="form-group">
                             <label class="col-sm-2 control-label" for="layout">Activate</label>
