--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -44,14 +44,14 @@ comments: false
 					<div class="form-horizontal" role="form">
                         <div class="form-group">
                             <label class="col-sm-2 control-label" for="layout">Activate</label>
-                            <div class="col-sm-10" style="margin-bottom:10px">
+                            <div class="col-sm-10">
                                 <input type="checkbox" ng-model="yaml.frontpage" /> Frontpage
                                 <input type="checkbox" ng-model="yaml.published" /> Published
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label" for="tagline">Tagline</label>
-                            <div class="col-sm-10" style="margin-bottom:10px">
+                            <div class="col-sm-10">
                                 <input type="text" class="form-control" id="tagline" ng-model="yaml.tagline" placeholder="Tagline (small text after the title)"/>
                             </div>
                         </div>
@@ -79,7 +79,7 @@ comments: false
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label" for="layout">Layout</label>
-                            <div class="col-sm-10" style="margin-bottom:10px">
+                            <div class="col-sm-10">
                                 <input type="text" class="form-control" id="layout" ng-model="yaml.layout" placeholder="Layout"/>
                             </div>
                         </div>
