--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -43,9 +43,9 @@ comments: false
 				<div ng-cloak class="well well-lg" collapse="advancedSettings">
 					<div class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label" for="layout">Activate</label>
+                            <label class="col-sm-2 control-label" for="frontpag">Activate</label>
                             <div class="col-sm-10">
-                                <input type="checkbox" ng-model="yaml.frontpage" /> Frontpage
+                                <input type="checkbox" ng-model="yaml.frontpage" id="frontpage"/> Frontpage
                                 <input type="checkbox" ng-model="yaml.published" /> Published
                             </div>
                         </div>
