--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -18,6 +18,9 @@ comments: false
 		<div class="clearfix"></div>
         <div>
 		<div class="col-sm-12">
+            <div>
+                <h1>Advanced Settings</h1>
+            </div>
             <form name="editForm" class="form" role="form">
 				<div class="row">
 					<div class="col-xs-12 col-md-4 form-group">
