--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 <div style='background-color:#000000;width:100%;height:100%;text-align: center'>
-<img src='http://imgsrc.hubblesite.org/hu/db/images/hs-2004-07-b-web_print.jpg' alt='Hubble Ultra Deep Field Infrared View of Galaxies Billions of Light-Years Away' style='height: 100%;' /><br /><span style='font-size:10px;color:#686868;font-style: italic;'>Source: <a style='color:#686868;font-style: italic;' href='http://hubblesite.org'>Hubblesite.org</a></span>
+<img src='http://imgsrc.hubblesite.org/hu/db/images/hs-2004-07-b-web_print.jpg' alt='Hubble Ultra Deep Field Infrared View of Galaxies Billions of Light-Years Away' style='height: 100%;' />
 </div>
