--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -81,11 +81,11 @@ comments: false
                     <div class="row">&nbsp;</div>
                 </div>
             </form>
-			<button id="advanced" class="btn btn-default" ng-click="advancedSettings = !advancedSettings" ng-href="#advanced">Advanced Settings</button>
+			<button class="btn btn-default" ng-click="advancedSettings = !advancedSettings" ng-href="#advanced">Advanced Settings</button>
 			<button ng-disabled="(editForm.$dirty && editForm.$invalid) || editForm.$pristine" ng-click="save(editForm.$pristine)" class="btn btn-primary pull-right" type="button" disabled="disabled">
 				Submit
 			</button>
-			<div class="row">&nbsp;</div>
+			<div class="row" id="advanced" >&nbsp;</div>
 		</div>
     </div>
 	
