--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -26,7 +26,7 @@ comments: false
 		<div ng-repeat="backendEntry in backendEntries">
 			{{backendEntry}}
 		</div>
-		<textarea id="target-editor" style="display:none;"></textarea>
+		<textarea id="target-editor"></textarea>
     </div>
 
 {% endraw %}
