--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -27,6 +27,7 @@ comments: false
 			{{backendEntry}}
 		</div>
 		<textarea id="target-editor"></textarea>
+        <div class="row" id="advanced">&nbsp;</div>
     </div>
 
 {% endraw %}
