--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -20,13 +20,17 @@ comments: false
 			</form>
         </div>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
-			<button class='btn btn-warning pull-right' ng-click="githubCommit()">Commit to GitHub</button>
+			<button class='btn btn-warning pull-right' ng-click="githubCommit()">Save frontend config</button>
 		</div>
 		<h1>Edit Backend Configuration</h1>
 		<div ng-repeat="backendEntry in backendEntries">
 			{{backendEntry}}
 		</div>
 		<textarea id="target-editor"></textarea>
+        <div class="row" id="advanced">&nbsp;</div>
+        <div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
+            <button class='btn btn-warning pull-right' ng-click="githubCommit()">Save backend config</button>
+        </div>
         <div class="row" id="advanced">&nbsp;</div>
     </div>
 
