--- a/app/admin/editConfig.html
+++ b/app/admin/editConfig.html
@@ -26,7 +26,7 @@ comments: false
 		<div ng-repeat="backendEntry in backendEntries">
 			{{backendEntry}}
 		</div>
-		<textarea id="target-editor"></textarea>
+		<textarea id="target-editor" style="display:none"></textarea>
         <div class="row" id="advanced">&nbsp;</div>
         <div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
             <button class='btn btn-warning pull-right' ng-click="saveBackendConfig()">Save backend config</button>
