--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -32,7 +32,7 @@ comments: false
 						</div>
 					</div>
 				</div>
-			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
+			    <textarea id="target-editor" style="display:none;color:#464545;" required></textarea>
 				<div class="row">&nbsp;</div>
                 <div ng-cloak class="well well-lg" collapse="advancedSettings">
                     <div class="form-horizontal" role="form">
