--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -82,12 +82,12 @@ comments: false
                 </div>
             </form>
 			<button class="btn btn-default" ng-click="advancedSettings = !advancedSettings" ng-href="#advanced">Advanced Settings</button>
-            <button class="btn btn-primary pull-right" type="button">
-                Cancel
-            </button>
             <button ng-disabled="(editForm.$dirty && editForm.$invalid)" ng-click="save(editForm.$pristine)" class="btn btn-primary pull-right" type="button" disabled="disabled">
 				Submit
 			</button>
+            <button class="btn btn-primary pull-right" type="button" ng-click="cancel">
+                Cancel
+            </button>
 			<div class="row" id="advanced">&nbsp;</div>
 		</div>
     </div>
