--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 <div style='background-color:#000000;width:100%;height:100%;text-align: center'>
-<img src='http://imgsrc.hubblesite.org/hu/db/images/hs-2004-07-b-web_print.jpg' alt='Hubble Ultra Deep Field Infrared View of Galaxies Billions of Light-Years Away' style='height: 100%;' />
+<img src='/assets/images/SpiralGalaxyNGC7331.jpg' alt='Similar in size to our Milky Way, the Spiral Galaxy NGC 7331 is about 50 million light-years distant. Such images will become much more widely available for research, education, and the general public as part of “virtual observatories” using IVOA and CDS developed VOSpace infrastructure and the iRODS data management system. In one of the deepest views of the region to date, the data were processed to reveal sharp details. Credit: Vicent Peris (OAUV / PTeam), Gilles Bergond, Calar Alto Observatory' style='height: 100%;' />
 </div>
